--- a/workspace/ims-webapp/src/main/resources/templates/index.html
+++ b/workspace/ims-webapp/src/main/resources/templates/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="refresh" content="0; url=app/index.html" />
 
-<title>Insert title here</title>
+<title>IMS WebApp</title>
 </head>
 <body>
-
 	<p><a href="app/index.html">Redirect</a></p>
 
 </body>
